# wavjepa

./: .gitignore  LICENSE  README.md  arch.sh  arch_eval.sh  denoise.py  denoise.sh  eval_hear.sh  eval_local.sh  eval_nathear_ambisonics.sh  eval_nathear_binaural.sh  pyproject.toml  requirements.txt  requirements_eval.txt  run_arch.sh  run_hear.sh  run_hear_hf.sh  run_hear_noisy.sh  run_hear_noisy_reverb.sh  run_hear_reverb.sh  run_nathear_hf.sh  run_real_world_wavjepa.sh  run_real_world_wavjepa_denoised.sh  run_realseld_hf.sh  run_xares.sh  train.py  train.sh  utils.py
ARCH/: evaluate_wavjepa_model.py
ARCH/arch_eval/evaluation/classification/music/: fma_small.py
ARCH/configs/: wavjepa_wrapper.py
configs/: base.yaml  denoise.yaml
configs/data/: audioset.yaml  audioset_denoise.yaml  audioset_librispeech.yaml  audioset_librispeech_025.yaml  audioset_librispeech_050.yaml  audioset_librispeech_075.yaml  audioset_no_rir_no_noise.yaml  audioset_no_rir_noise.yaml  audioset_rir_no_noise.yaml  librispeech.yaml  librispeech_denoise.yaml
configs/extractor/: ConvChannelFeatureExtractor.yaml  ConvChannelFeatureExtractor_removed_last.yaml  ConvFeatureExtractor.yaml  ConvFeatureExtractor_removed_last.yaml  SpectrogramExtractor.yaml  wav2vec2.yaml  wavjepa.yaml
configs/masker/: AudioSet.yaml  LibriSpeech.yaml  MultiBlock.yaml  Random.yaml  RandomCluster.yaml  TimeInverseBlock.yaml  TimeInverseBlockMasker.yaml
configs/optimizer/: adamW.yaml  adamW_denoise.yaml
configs/trainer/: default_trainer.yaml  denoise.yaml  denoise_librispeech.yaml
data_modules/: WebAudioDataModule.py  WebAudioDataModuleBatched.py  WebAudioDataModuleDenoiser.py  WebAudioDataModuleLMDB.py  __init__.py  dataset_functions.py
data_modules/iterators/: NoiseIterator.py  SceneIterator.py  __init__.py
data_modules/scene_module/: generate_scenes.py  generate_scenes_batch.py
hear-eval-kit/heareval/embeddings/: runner.py  task_embeddings.py
hear-eval-kit/heareval/predictions/: task_predictions.py
hear_api/: feature_helper.py  runtime.py  runtime_natjepa.py
hear_api/heaRIR/: augment.py
hear_api/heaRIR/iterators/: NoiseIterator.py  SceneIterator.py
hear_api/heaRIR/scene_module/: __init__.py  generate_scenes.py
hear_configs/: SJEPA.py  SJEPA_nat.py  SJEPA_spec.py  WavJEPA.py  WavJEPANat_huggingface.py  WavJEPA_huggingface.py  WavJEPA_nat.py  WavJEPA_w2v2.py
listen-eval-kit/: .gitignore  activate.sh  install_requirements.sh
listen-eval-kit/heareval/: multigpu.py  score.py
listen-eval-kit/heareval/embeddings/: runner.py  task_embeddings.py
listen-eval-kit/heareval/predictions/: runner.py  task_predictions.py
scripts/: benchmark_transformer.py  channel_embedding_plot.py  compute_predictions.py  plot_benchmark_transformer.py  preprocess_braindecode_dataset.py  preprocess_moabb_dataset.py  product_args.py  umap_compute.py
scripts/config/: batch_size_export.yaml  eeg_jepa_Lee2019_eval.yaml  eeg_jepa_Lee2019_export.yaml  eeg_jepa_Lee2019_preprocessing.yaml  eeg_jepa_Lee2019_spat-mask.yaml  eeg_jepa_TUH_preprocessing.yaml  eeg_jepa_tuh_spat-mask.yaml
scripts/snellius/: README.md  chinchilla_tuh.sh
sjepa/: audio_masking.py  functions.py  jepa.py  masking.py  masking_utils.py  pos_embed.py  utils.py
sjepa/extractors/: __init__.py  audio_channel_feature_extractor.py  audio_extractor.py  audio_feature_extractor.py  spectrogram.py
sjepa/layers/: __init__.py  swin.py
sjepa/types/: __init__.py  sjepa_configs.py
tests/: conftest.py  test_functions.py
wavjepa/: __init__.py  audio_masking.py  denoiser.py  jepa.py  jepa_denoise.py  masking.py  masking_utils.py  simclr_denoise.py  utils.py
wavjepa/extractors/: __init__.py  audio_extractor.py
wavjepa/types/: __init__.py  sjepa_configs.py
